[gd_scene load_steps=5 format=3 uid="uid://bslbs8c6vmrgu"]

[ext_resource type="Script" path="res://Actors/objects/Disappearing Platform/Disappearing_Platform.gd" id="1_oh46t"]
[ext_resource type="Texture2D" uid="uid://delpeho1l4ndb" path="res://Graphics/autotile_template_3x3_minimal.png" id="2_2tr0e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nmusc"]
size = Vector2(48, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iifb8"]
size = Vector2(46, 4)

[node name="Disappearing_Platform" type="AnimatableBody2D" node_paths=PackedStringArray("player_trigger")]
collision_mask = 2
script = ExtResource("1_oh46t")
player_trigger = NodePath("Area2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2tr0e")
region_enabled = true
region_rect = Rect2(16, 48, 48, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nmusc")

[node name="ReappearTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="DisappearTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_iifb8")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
